<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">
        <!--        toolbar constrain-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/toolbar_txt_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_downloads"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_3sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/threads"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_my_downloads"
                app:tint="@color/textColor" />

            <ImageView
                android:id="@+id/threads"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/threads"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/textColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        main scrollview-->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--new update available-->
                <LinearLayout
                    android:id="@+id/updateNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_9sdp"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:background="@drawable/round_button"
                    android:elevation="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_7sdp"
                        android:src="@drawable/update_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/textColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:gravity="center_vertical"
                        android:text="New update is Available. Update now to enjoy the new features!"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/actionbar_more_info"
                        app:layout_constraintStart_toEndOf="@+id/actionbar_more_info"
                        app:layout_constraintTop_toTopOf="@+id/actionbar_more_info" />

                </LinearLayout>
                <!-- download card view-->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_9sdp"
                    android:layout_marginVertical="@dimen/_3sdp"
                    app:cardCornerRadius="@dimen/card_radius">

                    <LinearLayout
                        android:id="@+id/ll_past"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toolbar"
                        android:background="@drawable/round_button"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/text_past"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_7sdp"
                            android:text="@string/paste_url_here"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_12ssp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_marginHorizontal="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:background="@drawable/pastlink_drawable"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/pastlink"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_9sdp"
                                android:layout_marginEnd="@dimen/_9sdp"
                                android:layout_weight="1"
                                android:background="@color/transparent"
                                android:hint="@string/url_example"
                                android:inputType="text"
                                android:textColor="@color/black"
                                android:textColorHint="@color/creame_light"
                                android:textSize="@dimen/_10ssp" />

                            <TextView
                                android:id="@+id/paste"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@drawable/pastbutton_drawable"
                                android:gravity="center"
                                android:paddingHorizontal="@dimen/_16sdp"
                                android:text="@string/tv_paste"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/generate"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_marginHorizontal="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:background="@drawable/pastlink_drawable"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/generate_icon"
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_gravity="center"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/ic_genreated"
                                app:tint="@color/light_cream" />

                            <TextView
                                android:id="@+id/txt_generate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_4sdp"
                                android:text="@string/genreted"
                                android:textColor="@color/creame_light"
                                android:textSize="@dimen/_10ssp" />


                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--adview-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_9sdp"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:background="@drawable/round_button"
                    android:elevation="@dimen/_1sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linerAdFull"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                    </LinearLayout>
                </LinearLayout>
                <!--preview relative view-->
                <RelativeLayout
                    android:id="@+id/ll_all_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_9sdp"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/round_button"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_nodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/no_data_found"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:orientation="vertical" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!--Downlaod all button-->
        <LinearLayout
            android:id="@+id/ll_downloder"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_9sdp"
            android:background="@drawable/round_button_lang"
            android:paddingHorizontal="@dimen/_15sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Download All"
                android:textSize="@dimen/toolbar_txt_size" />

            <TextView
                android:id="@+id/tv_download_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@drawable/round_button_lang"
                android:backgroundTint="@color/cardColor"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_7sdp"
                android:text="4"
                android:textColor="@color/textColor"
                android:textSize="@dimen/toolbar_txt_size"
                android:visibility="gone"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
